white space fixes in code block

--- a/src/main/sass/_bulma.scss
+++ b/src/main/sass/_bulma.scss
@@ -83,5 +83,6 @@ code {
   padding: .25em;
   background-color: transparent;
   border-radius: $radius;
+  white-space: pre-wrap;
 }
 
